[tool.bandit]
exclude_dirs = ["tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.poetry]
name = "dronefly-core"
version = "0.3.9.dev1"
description = "Core dronefly components"
authors = ["Ben Armstrong <synrg@debian.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "dronefly/core" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyinaturalist = "=0.20.0.dev1"
dateparser = "^1.1.1"
filelock = "^3.13.3"
inflect = "^5.3.0"
html2markdown = "^0.1.7"
rich = ">=13.4"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pylint = "^2.10.2"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
